--- a/coresense_instrumentation_driver/package.xml
+++ b/coresense_instrumentation_driver/package.xml
@@ -14,7 +14,7 @@
   <depend>rclcpp_components</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
-  <depend>imagE_transport</depend>
+  <depend>image_transport</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
