--- a/coresense_instrumentation_driver/package.xml
+++ b/coresense_instrumentation_driver/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>coresense_instrumentation_driver</name>
-  <version>0.1.0</version>
+  <version>0.2.0</version>
   <description>Coresense Instrumentation Driver</description>
   <maintainer email="jc.manzanares.serrano@gmail.com">Juan Carlos Manzanares Serrano</maintainer>
   <license>Apache-2.0</license>
@@ -14,6 +14,7 @@
   <depend>rclcpp_components</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>image_transport</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
