--- a/coresense_instrumentation_driver/package.xml
+++ b/coresense_instrumentation_driver/package.xml
@@ -15,6 +15,7 @@
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>image_transport</depend>
+  <depend>coresense_instrumentation_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
