--- a/coresense_instrumentation_interfaces/package.xml
+++ b/coresense_instrumentation_interfaces/package.xml
@@ -3,11 +3,18 @@
 <package format="3">
   <name>coresense_instrumentation_interfaces</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Coresense Instrumentation Interfaces</description>
   <maintainer email="jc.manzanares.serrano@gmail.com">juanca</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  
+  <depend>std_msgs</depend>
+  <depend>lifecycle_msgs</depend>
+  <depend>rosidl_default_generators</depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
